--- a/notice.html
+++ b/notice.html
@@ -58,29 +58,44 @@
                 </div>
 
                 <div class="bg-white rounded-2xl shadow-lg border border-slate-100 overflow-hidden">
-                    <div class="overflow-x-auto">
-                        <table class="w-full text-left border-collapse">
-                            <thead>
-                                <tr class="bg-slate-50 border-b border-slate-200">
-                                    <th class="p-6 font-bold text-slate-900 w-24 text-center">번호</th>
-                                    <th class="p-6 font-bold text-slate-900">제목</th>
-                                    <th class="p-6 font-bold text-slate-900 w-32 text-center">작성자</th>
-                                    <th class="p-6 font-bold text-slate-900 w-32 text-center">작성일</th>
-                                </tr>
-                            </thead>
-                            <tbody class="divide-y divide-slate-100">
-                                <!-- Notice Item 1 -->
-                                <tr id="notice-row-1" class="hover:bg-slate-50 transition-colors cursor-pointer group">
-                                    <td class="p-6 text-center text-amber-600 font-bold">1</td>
-                                    <td class="p-6 text-slate-900 group-hover:text-amber-700 transition-colors font-bold">
-                                        <span class="inline-block bg-amber-100 text-amber-800 text-[10px] px-2 py-0.5 rounded mr-2 font-bold align-middle">공지</span>
-                                        참좋은동물병원 홈페이지가 새롭게 오픈했습니다.
-                                    </td>
-                                    <td class="p-6 text-center text-slate-500 text-sm">관리자</td>
-                                    <td class="p-6 text-center text-slate-500 text-sm">2026.01.01</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <!-- Desktop Header -->
+                    <div class="hidden md:grid grid-cols-[80px_1fr_120px_120px] bg-slate-50 border-b border-slate-200 font-bold text-slate-900 text-center">
+                        <div class="p-6">번호</div>
+                        <div class="p-6 text-left">제목</div>
+                        <div class="p-6">작성자</div>
+                        <div class="p-6">작성일</div>
+                    </div>
+
+                    <!-- List Items -->
+                    <div class="divide-y divide-slate-100">
+                        <!-- Notice Item 1 -->
+                        <div id="notice-row-1" class="group hover:bg-slate-50 transition-colors cursor-pointer">
+                            <!-- Desktop View -->
+                            <div class="hidden md:grid grid-cols-[80px_1fr_120px_120px] items-center">
+                                <div class="p-6 text-center text-amber-600 font-bold">1</div>
+                                <div class="p-6 text-left text-slate-900 group-hover:text-amber-700 transition-colors font-bold truncate">
+                                    <span class="inline-block bg-amber-100 text-amber-800 text-[10px] px-2 py-0.5 rounded mr-2 font-bold align-middle">공지</span>
+                                    참좋은동물병원 홈페이지가 새롭게 오픈했습니다.
+                                </div>
+                                <div class="p-6 text-center text-slate-500 text-sm">관리자</div>
+                                <div class="p-6 text-center text-slate-500 text-sm">2026.01.01</div>
+                            </div>
+
+                            <!-- Mobile View -->
+                            <div class="md:hidden p-6 flex flex-col gap-2">
+                                <div class="flex items-center justify-between mb-1">
+                                    <span class="bg-amber-100 text-amber-800 text-[10px] px-2 py-0.5 rounded font-bold">공지</span>
+                                    <span class="text-xs text-slate-400">2026.01.01</span>
+                                </div>
+                                <h3 class="font-bold text-slate-900 text-lg leading-snug group-hover:text-amber-700 transition-colors">
+                                    참좋은동물병원 홈페이지가 새롭게 오픈했습니다.
+                                </h3>
+                                <div class="flex items-center justify-between mt-2 pt-2 border-t border-slate-50">
+                                    <span class="text-xs text-slate-500">작성자: 관리자</span>
+                                    <span class="text-xs text-slate-400 flex items-center gap-1">자세히 보기 <i data-lucide="chevron-right" class="w-3 h-3"></i></span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
