--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             <div class="photo-card group relative overflow-hidden rounded-2xl aspect-square bg-white shadow-sm border border-slate-200 block cursor-pointer">
                 <img src="case02.jpg" alt="수술 사례 2" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 opacity-90 group-hover:opacity-100" />
                 <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity pointer-events-none">
-                    <span class="text-amber-400 text-xs font-bold uppercase tracking-wider mb-1">Female Case</span>
-                    <p class="text-white text-sm font-medium">1</p>
-                    <p class="text-slate-300 text-[10px] mt-1">2</p>
+                    <span class="text-amber-400 text-xs font-bold uppercase tracking-wider mb-1">Cat Case</span>
+                    <p class="text-white text-sm font-medium">암컷 (2.6kg)</p>
+                    <p class="text-slate-300 text-[10px] mt-1">절개 크기: 약 1.0cm</p>
                     <div class="mt-2 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] text-white/80"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
