--- a/notice.html
+++ b/notice.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="flex flex-col">
                             <span id="logo-text" class="text-xl font-bold tracking-tight transition-colors text-white">참좋은</span>
-                            <span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPAY AND NEUTER CLINIC</span>
+                            <span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPAY & NEUTER CLINIC</span>
                         </div>
                     </a>
                 </div>
