--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@
           <div class="flex items-center">
             <a href="index.html" class="flex items-center gap-2 group">
                <div id="logo-circle" class="w-10 h-10 rounded-full flex items-center justify-center border-2 transition-colors border-white text-white"><span class="font-serif font-bold text-xl">C</span></div>
-               <div class="flex flex-col"><span id="logo-text" class="text-xl font-bold tracking-tight transition-colors text-white">참좋은</span><span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPAY AND NEUTER CLINIC</span></div>
+               <div class="flex flex-col"><span id="logo-text" class="text-xl font-bold tracking-tight transition-colors text-white">참좋은</span><span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPAY & NEUTER CLINIC</span></div>
             </a>
           </div>
           <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
