--- a/neutering-photos.html
+++ b/neutering-photos.html
@@ -84,8 +84,8 @@
                 <img src="case03.jpg" alt="수술 사례 3" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                 <div class="absolute inset-0 bg-black/60 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
                     <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 03</span>
-                    <p class="text-sm font-bold">1</p>
-                    <p class="text-[10px] text-slate-300 mt-1">2</p>
+                    <p class="text-sm font-bold">암컷 (2.7kg)</p>
+                    <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 1.0cm</p>
                     <div class="mt-4 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] bg-white/20 px-2 py-1 rounded-full"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
