--- a/neutering-photos.html
+++ b/neutering-photos.html
@@ -104,6 +104,19 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Case 05 (New) -->
+            <div class="photo-card relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200 cursor-pointer">
+                <img src="case05.jpg" onerror="this.src='case01.jpg'" alt="수술 사례 5" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                <div class="absolute inset-0 bg-black/60 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
+                    <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 05</span>
+                    <p class="text-sm font-bold">암컷</p>
+                    <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 0.9cm</p>
+                    <div class="mt-4 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
+                        <span class="inline-flex items-center gap-1 text-[10px] bg-white/20 px-2 py-1 rounded-full"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
+                    </div>
+                </div>
+            </div>
         </div>
         </div></section>
     </main>
