--- a/clinic-hours.html
+++ b/clinic-hours.html
@@ -40,7 +40,7 @@
       </div>
       <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white shadow-lg md:hidden border-t max-h-[80vh] overflow-y-auto">
           <div class="flex flex-col py-4">
-            <div><button id="mobile-about-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">병원소개<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-about-icon"></i></button><div id="mobile-about-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="index.html#greetings" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">인사말</a><a href="clinic-hours.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">진료시간안내</a><a href="location.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a></div></div>
+            <div><button id="mobile-about-btn" class="w-full flex justify-between items-center px-6 py-3 text-amber-600 font-bold hover:bg-slate-50">병원소개<i data-lucide="chevron-down" class="w-4 h-4 transition-transform rotate-180" id="mobile-about-icon"></i></button><div id="mobile-about-menu" class="block bg-slate-50 border-y border-slate-100"><a href="index.html#greetings" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">인사말</a><a href="clinic-hours.html" class="block px-10 py-3 text-sm text-amber-600 bg-amber-50 border-l-4 border-amber-600 font-bold">진료시간안내</a><a href="location.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a></div></div>
             <a href="pricing.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">진료비안내</a>
             <div><button id="mobile-neutering-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">중성화수술<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-neutering-icon"></i></button><div id="mobile-neutering-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="neutering-process.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">초미세 절개 중성화 수술</a><a href="neutering-cost.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">합리적인 수술 비용</a><a href="neutering-care.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 후 사진</a></div></div>
             <a href="stemcell.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
@@ -55,7 +55,6 @@
             <div class="text-center mb-16"><span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Clinic Hours</span><h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">진료시간 안내</h2><p class="text-slate-600">편안한 진료를 위해 방문 전 진료 시간을 확인해 주세요.</p></div>
             
             <div class="grid lg:grid-cols-2 gap-10 max-w-5xl mx-auto">
-                <!-- Left: Time Table -->
                 <div class="bg-white rounded-3xl shadow-xl border border-slate-100 overflow-hidden h-fit">
                     <div class="bg-slate-900 p-8 text-white flex items-center justify-between">
                         <h3 class="text-2xl font-serif font-bold">Time Table</h3>
@@ -93,10 +92,7 @@
                         </ul>
                     </div>
                 </div>
-
-                <!-- Right: Info -->
                 <div class="space-y-8">
-                    <!-- Reservation Note -->
                     <div class="bg-slate-50 rounded-3xl p-8 border border-slate-200">
                         <div class="flex items-center gap-3 mb-4">
                             <i data-lucide="alert-circle" class="w-6 h-6 text-amber-600"></i>
@@ -113,8 +109,6 @@
                             </li>
                         </ul>
                     </div>
-
-                    <!-- Preparation Note -->
                     <div class="bg-slate-50 rounded-3xl p-8 border border-slate-200">
                         <div class="flex items-center gap-3 mb-4">
                             <i data-lucide="file-text" class="w-6 h-6 text-blue-600"></i>
@@ -124,8 +118,6 @@
                             처음 진료를 오시는 경우, 의료진과의 진료상담을 위해 타 병원의 검사 기록 등의 자료들을 준비해 오시면 더 좋습니다.
                         </p>
                     </div>
-
-                    <!-- Contact -->
                     <div class="bg-slate-900 rounded-3xl p-8 text-white text-center">
                         <h3 class="text-lg font-bold mb-2">예약 및 진료 문의</h3>
                         <p class="text-slate-400 text-sm mb-6">편안한 진료를 위해 사전 예약을 권장합니다.</p>
@@ -138,7 +130,6 @@
             </div>
         </div></section>
     </main>
-    
     <footer id="contact" class="bg-slate-900 text-slate-300">
         <div class="w-full h-96 bg-slate-200 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full transition-all duration-700" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
