--- a/stemcell.html
+++ b/stemcell.html
@@ -29,7 +29,7 @@
             <div class="relative group"><button class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90 flex items-center gap-1 py-4">중성화수술<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
                 <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block"><div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100"><a href="neutering-process.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">초미세 절개</a><a href="neutering-cost.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">합리적인 비용</a><a href="neutering-care.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">수술 후 사진</a></div></div>
             </div>
-            <a href="stemcell.html" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">줄기세포/엑소좀 치료(준비중)</a>
+            <a href="stemcell.html" class="nav-link text-sm font-medium text-amber-500 transition-colors">줄기세포/엑소좀 치료(준비중)</a>
             <div class="relative group"><button class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90 flex items-center gap-1 py-4">커뮤니티<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
                 <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block"><div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100"><a href="notice.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">공지사항</a><a href="tv-appearance.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">방송출연</a></div></div>
             </div>
@@ -42,7 +42,7 @@
             <div><button id="mobile-about-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">병원소개<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-about-icon"></i></button><div id="mobile-about-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="index.html#greetings" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">인사말</a><a href="clinic-hours.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">진료시간안내</a><a href="location.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a></div></div>
             <a href="pricing.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">진료비안내</a>
             <div><button id="mobile-neutering-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">중성화수술<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-neutering-icon"></i></button><div id="mobile-neutering-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="neutering-process.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">초미세 절개 중성화 수술</a><a href="neutering-cost.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">합리적인 수술 비용</a><a href="neutering-care.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 후 사진</a></div></div>
-            <a href="stemcell.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
+            <a href="stemcell.html" class="mobile-link px-6 py-3 text-amber-600 bg-amber-50 border-l-4 border-amber-600 font-bold">줄기세포/엑소좀 치료(준비중)</a>
             <div><button id="mobile-community-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">커뮤니티<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-community-icon"></i></button><div id="mobile-community-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="notice.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">공지사항</a><a href="tv-appearance.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">방송출연</a></div></div>
           </div>
       </div>
@@ -54,67 +54,15 @@
     </main>
     
     <footer id="contact" class="bg-slate-900 text-slate-300">
-        <div class="w-full h-96 bg-slate-200 relative">
-            <iframe 
-                title="참좋은동물병원 위치"
-                src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed"
-                width="100%" 
-                height="100%" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                class="w-full h-full transition-all duration-700"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
+        <div class="w-full h-96 bg-slate-200 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full transition-all duration-700" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
-                <div>
-                    <h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3>
-                    <p class="text-slate-400 text-sm leading-relaxed mb-6">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p>
-                </div>
-                <div>
-                    <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Contact Us</h4>
-                    <ul class="space-y-4">
-                        <li class="flex items-start gap-3">
-                            <i data-lucide="map-pin" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i>
-                            <span class="text-sm">경남 밀양시 밀양대로 1896 1층<br/>참좋은동물병원</span>
-                        </li>
-                        <li class="flex items-center gap-3">
-                            <i data-lucide="phone" class="text-amber-500 flex-shrink-0 w-4 h-4"></i>
-                            <span class="text-sm">055-351-3581</span>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Hours</h4>
-                    <ul class="space-y-4">
-                        <li class="flex items-start gap-3">
-                            <i data-lucide="clock" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i>
-                            <div class="text-sm">
-                                <strong class="text-amber-500 block mb-1">일요일, 공휴일 휴무</strong>
-                                <span class="block mb-2"></span>
-                                <strong class="text-white block mb-1">진료시간</strong>
-                                <span class="block">월 ~ 금 : 오전 10:00 - 오후 06:00</span>
-                                <span class="block">토요일 : 오전 10:00 - 오후 03:00</span>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Quick Menu</h4>
-                    <ul class="space-y-2 text-sm">
-                        <li><a href="index.html#greetings" class="hover:text-amber-400 transition-colors">인사말</a></li>
-                        <li><a href="pricing.html" class="hover:text-amber-400 transition-colors">진료비안내</a></li>
-                        <li><a href="index.html#neutering" class="hover:text-amber-400 transition-colors">중성화수술</a></li>
-                        <li><a href="notice.html" class="hover:text-amber-400 transition-colors">커뮤니티</a></li>
-                    </ul>
-                </div>
+                <div><h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3><p class="text-slate-400 text-sm leading-relaxed mb-6">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p></div>
+                <div><h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Contact Us</h4><ul class="space-y-4"><li class="flex items-start gap-3"><i data-lucide="map-pin" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i><span class="text-sm">경남 밀양시 밀양대로 1896 1층<br/>참좋은동물병원</span></li><li class="flex items-center gap-3"><i data-lucide="phone" class="text-amber-500 flex-shrink-0 w-4 h-4"></i><span class="text-sm">055-351-3581</span></li></ul></div>
+                <div><h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Hours</h4><ul class="space-y-4"><li class="flex items-start gap-3"><i data-lucide="clock" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i><div class="text-sm"><strong class="text-amber-500 block mb-1">일요일, 공휴일 휴무</strong><span class="block mb-2"></span><strong class="text-white block mb-1">진료시간</strong><span class="block">월 ~ 금 : 오전 10:00 - 오후 06:00</span><span class="block">토요일 : 오전 10:00 - 오후 03:00</span></div></li></ul></div>
+                <div><h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Quick Menu</h4><ul class="space-y-2 text-sm"><li><a href="index.html#greetings" class="hover:text-amber-400 transition-colors">인사말</a></li><li><a href="pricing.html" class="hover:text-amber-400 transition-colors">진료비안내</a></li><li><a href="index.html#neutering" class="hover:text-amber-400 transition-colors">중성화수술</a></li><li><a href="notice.html" class="hover:text-amber-400 transition-colors">커뮤니티</a></li></ul></div>
             </div>
-            <div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500">
-                <p>© 2026 Chamzeon Spay & Neuter Clinic. All rights reserved.</p>
-                <p class="mt-2">사업자등록번호: 615-16-96288 | 대표: 문현철</p>
-            </div>
+            <div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500"><p>© 2026 Chamzeon Spay & Neuter Clinic. All rights reserved.</p><p class="mt-2">사업자등록번호: 615-16-96288 | 대표: 문현철</p></div>
         </div>
     </footer>
     <script>
