--- a/tv-appearance.html
+++ b/tv-appearance.html
@@ -39,7 +39,7 @@
             <a href="pricing.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">진료비안내</a>
             <div><button id="mobile-neutering-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">중성화수술<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-neutering-icon"></i></button><div id="mobile-neutering-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="neutering-process.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">초미세 절개 중성화 수술</a><a href="neutering-cost.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">합리적인 수술 비용</a><a href="neutering-care.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 후 사진</a></div></div>
             <a href="stemcell.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
-            <div><button id="mobile-community-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">커뮤니티<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-community-icon"></i></button><div id="mobile-community-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="notice.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">공지사항</a><a href="tv-appearance.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">방송출연</a></div></div>
+            <div><button id="mobile-community-btn" class="w-full flex justify-between items-center px-6 py-3 text-amber-600 font-bold hover:bg-slate-50">커뮤니티<i data-lucide="chevron-down" class="w-4 h-4 transition-transform rotate-180" id="mobile-community-icon"></i></button><div id="mobile-community-menu" class="block bg-slate-50 border-y border-slate-100"><a href="notice.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">공지사항</a><a href="tv-appearance.html" class="block px-10 py-3 text-sm text-amber-600 bg-amber-50 border-l-4 border-amber-600 font-bold">방송출연</a></div></div>
           </div>
         </div>
     </header>
@@ -52,7 +52,6 @@
                     <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">TV Appearance</span>
                     <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">방송 출연</h2>
                 </div>
-
                 <div class="bg-white rounded-3xl overflow-hidden shadow-xl border border-slate-100">
                     <div class="grid lg:grid-cols-2">
                         <div class="relative aspect-video lg:aspect-auto bg-slate-900 group">
@@ -87,7 +86,6 @@
             </div>
         </section>
     </main>
-    
     <footer id="contact" class="bg-slate-900 text-slate-300">
         <div class="w-full h-96 bg-slate-200 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full transition-all duration-700" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
@@ -108,7 +106,6 @@
       const logoSub = document.getElementById('logo-sub');
       const navItems = document.querySelectorAll('.nav-item');
       const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-
       window.addEventListener('scroll', () => {
         const isScrolled = window.scrollY > 50;
         if (isScrolled) {
@@ -117,21 +114,21 @@
             logoCircle.classList.remove('border-white', 'text-white'); logoCircle.classList.add('border-slate-900', 'text-slate-900');
             logoText.classList.remove('text-white'); logoText.classList.add('text-slate-900');
             logoSub.classList.remove('text-slate-200'); logoSub.classList.add('text-slate-600');
+            mobileMenuBtn.classList.remove('text-white'); mobileMenuBtn.classList.add('text-slate-900');
             navItems.forEach(item => {
                 if (item.classList.contains('text-amber-500')) { item.classList.remove('text-amber-500'); item.classList.add('text-amber-600'); }
                 else { item.classList.remove('text-white'); item.classList.add('text-slate-800'); }
             });
-            mobileMenuBtn.classList.remove('text-white'); mobileMenuBtn.classList.add('text-slate-900');
         } else {
             header.classList.add('bg-transparent', 'py-6'); header.classList.remove('bg-white/95', 'backdrop-blur-md', 'shadow-md', 'py-3');
             logoCircle.classList.add('border-white', 'text-white'); logoCircle.classList.remove('border-slate-900', 'text-slate-900');
             logoText.classList.add('text-white'); logoText.classList.remove('text-slate-900');
             logoSub.classList.add('text-slate-200'); logoSub.classList.remove('text-slate-600');
+            mobileMenuBtn.classList.add('text-white'); mobileMenuBtn.classList.remove('text-slate-900');
             navItems.forEach(item => {
                 if (item.classList.contains('text-amber-600')) { item.classList.remove('text-amber-600'); item.classList.add('text-amber-500'); }
                 else { item.classList.add('text-white'); item.classList.remove('text-slate-800'); }
             });
-            mobileMenuBtn.classList.add('text-white'); mobileMenuBtn.classList.remove('text-slate-900');
         }
       });
       const mobileMenu = document.getElementById('mobile-menu');
